--- a/frontend/.env.docker
+++ b/frontend/.env.docker
@@ -1,2 +1,2 @@
-VITE_USER_API_URL=http://localhost:3001
-VITE_VEHICLE_API_URL=http://localhost:3002
+VITE_USER_API_URL: http://18.205.70.134:3001
+VITE_VEHICLE_API_URL: http://18.205.70.134:3002
